buildscript {
	repositories {
		maven {
			url = "https://maven.minecraftforge.net"
		}
		mavenCentral()
	}
	
	dependencies {
		classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
		classpath "org.spongepowered:mixingradle:0.7.+"
	}
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"

version = "1.19.3-3.2"
group = "net.luis.xbackpack"
archivesBaseName = "XBackpack"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println("Java: " + System.getProperty("java.version") + " JVM: " + System.getProperty("java.vm.version") + "(" + System.getProperty("java.vendor") + ") Arch: " + System.getProperty("os.arch"))
minecraft {
	mappings channel: "official", version: "1.19.3"

	accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
	
	runs {
		client {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "forge.logging.mojang.level", "debug"
			
			mods {
				examplemod {
					source sourceSets.main
				}
			}
		}
		
		server {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "forge.logging.mojang.level", "debug"
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
		
		gameTestServer {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
		
		data {
			workingDirectory project.file("run")
			
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
			
			args "--mod", "xbackpack", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
	}
}


sourceSets.main.resources { srcDir "src/generated/resources" }

repositories {
	maven {
		name = "Progwml6 maven"
		url = "https://dvs1.progwml6.com/files/maven/"
	}
	maven {
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
}

dependencies {
	minecraft "net.minecraftforge:forge:1.19.3-44.1.8"
	
	compileOnly fg.deobf("mezz.jei:jei-1.19.3-common-api:12.1.1.13")
	compileOnly fg.deobf("mezz.jei:jei-1.19.3-forge-api:12.1.1.13")
	runtimeOnly fg.deobf("mezz.jei:jei-1.19.3-forge:12.1.1.13")
}

jar {
	manifest {
		attributes([
				"Specification-Title"     : "XBackpack",
				"Specification-Version"   : "1.19.2-3.2",
				"Implementation-Title"    : project.name,
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd HH:mm:ssZ")
		])
	}
}

java {
	withSourcesJar()
}

artifacts {
	archives sourcesJar
}

jar.finalizedBy("reobfJar")

publishing {
	publications {
		mavenJava(MavenPublication) {
			artifact jar
			artifact sourcesJar
		}
	}
	
	repositories {
		maven {
			url uri("C:/Users/luiss/.m2/repository")
		}
		maven {
			url uri("${projectDir}/maven/repositories")
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}
